Revision history for Perl module Perl::Dist

0.90_03 Fri  4 Jan 2008
	- Perl::Dist::Download was a bad idea, I wanted the ability to
	  to build distribution from a minicpan mirror, but maintaining
	  that package and incrementing it every time a minor release
	  happens of an upstream package will become a nightmare.
	- Merged in PAR support from Perl-Dist-Glutamate (Steffen Muller)

0.90_02 Thu  3 Jan 2008
	- This release was used to build Vanilla Perl 14
	- Reorganising the default way that app_ver_name etc are done
	  to allow for distributions classes that can generate BOTH
	  5.8.8 and 5.10.0 distributions.
	- Changed the usage of perldist
	- Make sure Perl::Dist::Util::Toolchain in the tests uses the
	  full explicit Perl path.

0.90_01 Wed  2 Jan 2008
	- Major API refactoring
	- Converted Perl::Dist::Util::Toolchain to be completely
	  auto-resolving for what it should install.
	- Started the documentation process.

0.53 Sun 24 Dec 2007 (unreleased)
	- Adding support for websites in the start menu entries
	- Adding support for .bat launchers in the start menu
	- Completed Strawberry Perl 5.10.0 using this version
	- Wide-ranging refactoring and documentation to make
	  Perl::Dist suitable for other people to start using
	  for making Perl distributions.

0.52 Thu 20 Dec 2007
        - Adding an additional install flag to prevent
          installation to the old directory.

0.51 Wed 19 Dec 2007
	- Hard-code in the path to Perl 5.10.0 final
	- Move default environment vars from ::Script to ::Inno
	- Add share to no_index to prevent 5.8.8 overwritten
	  modules being listed on search.cpan.org

0.50 Wed 19 Dec 2007
	- Merging in Perl::Dist::Vanilla
	- Merging in Perl::Dist::Bootstrap
	- Added Perl::Dist::Util::Toolchain
	- Dynamically generate the distribution list
	- Clean up the shared files
	- Bug fixing and repairing perldist
	- Completed generation of exe releases

0.30 Sun 18 Nov 2007
	- Adding support for Perl 5.10.0
	- Adding support for zlib