@@ -6,6 +6,9 @@ Revision history for Perl module Perl::Dist
 	  that package and incrementing it every time a minor release
 	  happens of an upstream package will become a nightmare.
 	- Merged in PAR support from Perl-Dist-Glutamate (Steffen Muller)
+	- Adding more documentation
+	- Completed first implementation of Perl::Dist::Machine, for
+	  generating multiple variations of a dist at the same time.
 
 0.90_02 Thu  3 Jan 2008
 	- This release was used to build Vanilla Perl 14
